# edge_agents

./: .dockerignore  .gitignore  Dockerfile.v1  README.md  example_usage.py  main.py  out.csv  pyproject.toml  test_pipeline.py
local_llm/: errors.py  model_adapter.py  pipeline.py  pipeline_types.py  post_generation.py  pre_generation.py
models/: download_gguf.py  llama_server_adapter.py  prepare_model.py  test_inference.py
models/llama_adaption/: download_gguf.py  inference_api.py  llama_server_adapter.py  llama_server_manager.py  prepare_dataset.py  prepare_training_dataset.py  test_inference.py  test_inference_one_shot.py  validate_extracted_dataset.py
models/onnx_adaption/: onnx_adapter.py  onnx_converter.py  test_inference.py
profiles/: analyse_profile.py
src/: errors.py  gemma_adapter.py  gemma_pipeline.py  model_adapter.py  pipeline.py  post_generation.py  pre_generation.py  test_gemma.py
web_llm/: errors.js  index.html  memory_profiler.js  model_adapter.js  pipeline.js  pipeline_types.js  post_generation.js  pre_generation.js
web_llm/onnx_adaption_web/: convert_to_onnx.py
