[project]
name = "edge-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gguf>=0.17.1",
    "huggingface-hub>=1.3.7",
    "onnxruntime>=1.23.2",
    "psutil>=7.2.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "torch>=2.10.0",
    "transformers>=5.0.0",
]
