[project]
name = "edge-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "gguf>=0.17.1",
    "huggingface-hub>=1.3.7",
    "onnxconverter-common>=1.16.0",
    "onnxruntime>=1.23.2",
    "openai>=2.20.0",
    "optimum[onnxruntime]>=1.17.1",
    "psutil>=7.2.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "torch>=2.10.0",
    "transformers>=5.0.0",
    "uvicorn>=0.41.0",
]
